name:                   client-ocsp
version:                0.1.0.1
synopsis:               Test OCSP client
description:            Run OCSP check during TLS handshake
author:                 Alexey Radkov <alexey.radkov@gmail.com>
maintainer:             Alexey Radkov <alexey.radkov@gmail.com>
copyright:              2024-2026 Alexey Radkov
category:               Network
build-type:             Simple
cabal-version:          1.20

executable client-ocsp
  default-language:     Haskell2010
  build-depends:        base >= 4.8 && < 5
                      , http-client
                      , http-client-tls
                      , bytestring
                      , crypton-connection
                      , crypton-x509
                      , crypton-x509-store
                      , crypton-x509-system
                      , crypton-x509-validation
                      , crypton-asn1-types
                      , tls
                      , time-hourglass
                      , data-default-class
                      , x509-ocsp

  main-is:              client-ocsp.hs

  ghc-options:         -Wall

